# pro-labs

./: .dockerignore  .env.medvault.example  .gitignore  .gitleaks.toml  .golangci.yml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  MEDVAULT.md  Makefile  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  REFACTORING_PLAN.md  TEST_COVERAGE_PLAN.md  TUI.md  VaultDB_Strategic_Roadmap.md  audit.md  build.sh  docker-compose.medvault.yml  docker-compose.yml  go.work  go.work.sum  mimocode.json  roadmap.md  run.sh  task (2).md  task.md  translate_all.py  translate_comments.py  translate_comments_2.py  translate_final.py  vaultdb-backup  vaultdb.yaml  vaultdb.yaml.example
.github/: dependabot.yml
.playwright-mcp/: page-2026-06-28T18-23-12-366Z.yml  page-2026-06-28T18-23-54-569Z.yml  page-2026-06-28T18-26-14-443Z.yml  page-2026-06-28T18-28-19-308Z.yml  page-2026-06-28T18-28-35-206Z.yml  page-2026-06-28T18-29-47-382Z.yml  page-2026-06-28T18-30-17-395Z.yml  page-2026-06-28T18-30-58-255Z.yml  page-2026-06-28T19-13-19-311Z.yml  page-2026-06-28T19-17-57-447Z.yml  page-2026-06-28T19-55-43-831Z.yml  page-2026-06-28T20-00-26-299Z.yml  page-2026-06-28T20-09-09-569Z.yml  page-2026-06-28T20-11-01-519Z.yml  page-2026-06-28T20-12-51-010Z.yml  page-2026-06-28T20-13-22-155Z.yml  page-2026-06-28T20-13-56-666Z.yml  page-2026-06-28T20-14-49-903Z.yml  page-2026-06-28T20-15-45-386Z.yml  page-2026-06-28T20-17-25-850Z.yml  page-2026-06-28T20-19-10-047Z.yml  page-2026-06-28T20-20-19-827Z.yml  page-2026-06-28T20-21-41-689Z.yml  page-2026-06-28T20-23-03-174Z.yml  page-2026-06-28T20-27-33-369Z.yml  page-2026-06-28T20-28-54-645Z.yml  page-2026-06-28T20-31-24-750Z.yml  page-2026-06-28T20-32-02-196Z.yml  page-2026-06-28T20-33-26-690Z.yml  page-2026-06-28T20-35-52-873Z.yml  page-2026-06-28T20-37-35-340Z.yml  page-2026-06-28T20-43-54-386Z.yml  page-2026-06-28T20-47-34-933Z.yml  page-2026-06-28T20-48-53-053Z.yml  page-2026-06-29T07-11-17-567Z.yml  page-2026-06-29T07-11-47-271Z.yml  page-2026-06-29T07-11-58-292Z.yml  page-2026-06-29T07-12-23-412Z.yml  page-2026-06-29T07-13-00-678Z.yml  page-2026-06-29T07-14-05-812Z.yml  (+34 more)
.semgrep/: vaultdb-sql-injection.yml
client/: CMakeLists.txt
client/go/: client.go  client_test.go  go.mod  tcp_client.go  tcp_client_test.go
client/js/: README.md  package-lock.json  package.json
client/js/src/: client.ts  index.ts  types.ts
client/js/tests/: client.test.ts
client/lib/include/vaultdb/: connection.hpp  json_utils.hpp  result.hpp  string_utils.hpp  vaultdb.hpp
client/lib/src/: connection.cpp  json_utils.cpp  json_utils.hpp  result.cpp
client/python/: README.md  setup.py
client/python/tests/: test_client.py
client/python/vaultdb/: client.py  protocol.py
client/shell/: main.cpp  renderer.cpp
client/tests/: CMakeLists.txt  test_json_utils.cpp  test_string_utils.cpp
client/tui/: CMakeLists.txt  main.cpp
client/tui/app/: app.cpp  app.hpp
client/tui/components/: autocomplete_popup.cpp  autocomplete_popup.hpp  row_detail.cpp  row_detail.hpp  table_view.cpp  table_view.hpp  tree_view.cpp  tree_view.hpp
client/tui/dialogs/: confirm_dialog.cpp  confirm_dialog.hpp  create_db_dialog.cpp  create_db_dialog.hpp  create_table_dialog.cpp  create_table_dialog.hpp  help_screen.cpp  help_screen.hpp  history_screen.cpp  history_screen.hpp
client/tui/logic/: autocomplete.cpp  autocomplete.hpp  config.cpp  config.hpp  highlighter.cpp  highlighter.hpp  history.cpp  history.hpp
client/tui/panels/: editor.cpp  editor.hpp  header.cpp  header.hpp  navigator.cpp  navigator.hpp  results.cpp  results.hpp  status_bar.cpp  status_bar.hpp
client/tui/screens/: connection_error.cpp  connection_error.hpp  main_screen.cpp  main_screen.hpp  splash_screen.cpp  splash_screen.hpp
client/tui/utils/: csv_exporter.cpp  csv_exporter.hpp  event_utils.hpp  sql_keywords.hpp  string_utils.cpp  string_utils.hpp
docs/: ai.md  api-reference.md  architecture.md  backup.md  client.md  configuration.md  data-types.md  deployment-enterprise.md  deployment.md  encryption.md  functions.md  glossary.md  hardening-checklist.md  index.md  indexes.md  installation.md  introduction.md  monitoring.md  mvcc.md  optimization-plan.md  optimizer.md  quickstart.md  security.md  sequences.md  sql-reference.md  storage-engine-rewrite-plan.md  storage.md  tcp-protocol.md  transactions.md  triggers.md  udf.md  views.md  wal.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  (+2 more)
gateway/: Dockerfile  go.mod
project/: docvault.py  import_documents.csv  server.py  setup_db.py  stage10_performance.sql  stage1_security.sql  stage2_schema.sql  stage3_data.sql  stage4_queries.sql  stage5_fulltext.sql  stage6_jsonb.sql  stage7_timetravel.sql  stage8_audit.sql  stage9_udf.sql  test_features.py
server/: benchmark  check_index.go  ci.sh  coverage.html  coverage.out  cpu.prof  go.mod  go.sum  mem.prof  result.go  technical_specification.md  vaultdb-backup  vaultdb.go  vaultdb_test.go
site/: package-lock.json  package.json  server.js
tools/: benchstat-gate.sh
(+761 files in other folders)
